SQUAD-9-313 Created functionality for updating client data.
