# src/routes.js
@@ -7,6 +7,8 @@ const apiRoutes = (app) => {
 
 	app.route('/api/v1/clients/:clientId').get(asyncRouteHandler(ClientsController.getOne));
 	app.route('/api/v1/clients/:clientId').delete(asyncRouteHandler(ClientsController.deleteOne));
+
+	app.route('/api/v1/clients/update/:clientId').post(asyncRouteHandler(ClientsController.updateOne));
 };
 
 module.exports = {
